<resources>
    <string name="app_name">Password Storer</string>

    <!--  Fonts  -->
    <string name="poppins_regular">PoppinsRegular.ttf</string>
    <string name="poppins_bold">PoppinsBold.ttf</string>
    <string name="font_awesome_solid">fa-solid.ttf</string>

    <string name="back_icon">&#xf137;</string>
    <string name="eye_icon">&#xf06e;</string>
    <string name="add_icon">&#xf0fe;</string>
    <string name="forward_arrow_icon">&#xf138;</string>
    <string name="google_icon">&#xf1a0;</string>
    <string name="yahoo_icon">&#xf19e;</string>
    <string name="bank_icon">&#xf66f;</string>
    <string name="cc_icon">&#xf09d;</string>
    <string name="dc_icon">&#xf389;</string>
    <string name="kyc_icon">&#xf577;</string>
    <string name="st_icon">&#xf15c;</string>
    <string name="gpay_icon">&#xe079;</string>

    <string name="set_up_new_app_pin">Set Up New Pin to use App</string>
    <string name="create_app_pin">Create Password Storer PIN</string>
    <string name="create_app_pin_desc">Create a 4 digit Password Storer PIN</string>
    <string name="or">Or</string>
    <string name="use_your_screen_lock_pin">Use Your Screen Lock</string>
    <string name="use_your_screen_lock_pin_desc">Protect Password Storer by using your existing phone screen lock</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_failed_try_again">Authentication Failed, Please try again after some time</string>
    <string name="authentication_success">Authentication Successful</string>
    <string name="authentication_required">Authentication required</string>
    <string name="pin_pattern_password">Pin, Pattern or Password</string>
    <string name="cancel">Cancel</string>
    <string name="set_up_pin_title">Set-Up Pin</string>
    <string name="enter_login_pin">Enter Pin to Login</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="set_up_4_digit_pin">Set up your 4 Digit digit Pin</string>
    <string name="confirm_4_digit_pin">Confirm Pin</string>
    <string name="save_pin">Save Pin</string>
    <string name="error_pin_do_match">Pin do not match</string>
    <string name="error_pin_blank">Pin cannot be blank</string>
    <string name="error_confirm_pin_blank">Confirm Pin cannot be blank</string>
    <string name="error_incorrect_pin">Incorrect PIN. Try Again</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="pin_saved_success">Pin Saved Successfully</string>
    <string name="pin_reset_success">Pin changed Successfully</string>
    <string name="pin_saved_failed">Please try after some time</string>
    <string name="pin_reset_failed">Pin Reset failed, Please try after some time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="list">List</string>
    <string name="dashboard">Dashboard</string>
    <string name="click_again_to_exit">Please click BACK again to exit</string>

<!--   Array -->

    <string-array name="category_array">
        <item>Emails</item>
        <item>Cards</item>
        <item>Bank Details</item>
        <item>KYC Details</item>
        <item>Application Pins</item>
        <item>Simple Text</item>
<!--        <item>Invalid below items</item>-->
<!--        <item>Google</item>-->
<!--        <item>Yahoo</item>-->
<!--        <item>Credit Card</item>-->
<!--        <item>Debit Card</item>-->
<!--        <item>Bank Details</item>-->
<!--        <item>KYC Details</item>-->
<!--        <item>Simple Text</item>-->
    </string-array>
    <integer-array name="category_type">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </integer-array>
</resources>