<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pin.SetUpPinFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_select_pin_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_create_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_create_pin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_create_pin"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <com.example.passwordstorer.common.customviews.CustomTextView
            android:id="@+id/tv_create_pin"
            style="@style/mediumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_app_pin"
            app:customFont="@string/poppins_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <com.example.passwordstorer.common.customviews.CustomTextView
            android:id="@+id/tv_create_pin_desc"
            style="@style/smallTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:lines="2"
            android:text="@string/create_app_pin_desc"
            android:textColor="@color/light_grey"
            app:customFont="@string/poppins_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_create_pin"
            app:layout_constraintStart_toStartOf="@id/tv_create_pin"
            app:layout_constraintTop_toBottomOf="@id/tv_create_pin"
            app:layout_constraintVertical_bias="0" />

        <RelativeLayout
            android:id="@+id/rl_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tv_use_existing_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_pin_desc">

            <com.example.passwordstorer.common.customviews.CustomTextView
                android:id="@+id/tv_or"
                style="@style/mediumTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/or" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_toStartOf="@id/tv_or"
                android:background="@color/white" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toEndOf="@id/tv_or"
                android:background="@color/white" />

        </RelativeLayout>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_use_existing_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_use_existing_pin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_use_existing_pin"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.passwordstorer.common.customviews.CustomTextView
            android:id="@+id/tv_use_existing_pin"
            style="@style/mediumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_your_screen_lock_pin"
            app:customFont="@string/poppins_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/tv_create_pin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <com.example.passwordstorer.common.customviews.CustomTextView
            android:id="@+id/tv_use_existing_pin_desc"
            style="@style/smallTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/use_your_screen_lock_pin_desc"
            android:textColor="@color/light_grey"
            app:customFont="@string/poppins_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_create_pin"
            app:layout_constraintStart_toStartOf="@id/tv_create_pin"
            app:layout_constraintTop_toBottomOf="@id/tv_use_existing_pin"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_set_up_pin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.example.passwordstorer.common.customviews.CustomTextView
            style="@style/largeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_up_pin_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <com.example.passwordstorer.common.customviews.CustomTextView
            android:id="@+id/tv_set_up_4_pin"
            style="@style/mediumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_up_4_digit_pin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22" />

        <com.example.passwordstorer.common.customviews.PinEntryView
            android:id="@+id/set_up_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:digitBackground="@drawable/pin_background"
            app:digitTextColor="@color/white"
            app:digitTextSize="@dimen/medium_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:numDigits="4"
            app:pinInputType="number" />

        <com.example.passwordstorer.common.customviews.CustomTextView
            android:id="@+id/tv_confirm_pin"
            style="@style/mediumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_4_digit_pin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22" />

        <com.example.passwordstorer.common.customviews.PinEntryView
            android:id="@+id/confirm_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:digitBackground="@drawable/pin_background"
            app:digitTextColor="@color/white"
            android:visibility="gone"
            app:digitTextSize="@dimen/medium_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:numDigits="4"
            app:pinInputType="number" />

        <com.example.passwordstorer.common.customviews.CustomTextView
            android:id="@+id/tv_error_text"
            style="@style/mediumTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_pin_do_match"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_pin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:text="@string/save_pin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>